manifests/infrastructure/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: networking
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    hostname: api.imdbgraph.org
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: imdbgraph-tls
